--- a/style/style.css
+++ b/style/style.css
@@ -80,7 +80,7 @@ a:hover {
     border-radius: 50%; 
     overflow: hidden; 
     margin-bottom: 10px; 
-    margin-left: 40px;
+    margin-left: 50%;
     display: flex; 
     align-items: center; 
     justify-content: center; 
