--- a/style/style.css
+++ b/style/style.css
@@ -94,12 +94,13 @@ a:hover {
     display: flex; 
     align-items: center; 
     justify-content: center;
+    text-align: center;
 }
 .profile-image img {
     width: 100%;
     height: auto; 
     object-fit: cover;
-    position: relative;
+    position: flex;
 }
 
 .dc {
